# 2.s998-Lab-16-EZ

./: .gitignore  README  README.md  build.sh
data/.svn/: entries
docs/.svn/: all-wcprops  entries
lib/.svn/: entries
missions/.svn/: all-wcprops  entries
missions/gametime/: launch.sh  launch_aegir.sh  launch_buri.sh  launch_shoreside.sh  meta_aegir.bhv  meta_aegir.moos  meta_buri.bhv  meta_buri.moos  meta_shoreside.moos  plug_pCollectTempStats.moos  plug_uFldMessageHandler.moos  plug_uFldNodeBroker.moos
missions/gametime/.svn/text-base/: launch.sh.svn-base
missions/gametime2/: #meta_aegir_sim.moos#  genetic.py  launch_sim.sh  launch_vehicle.sh  logproc.txt  meta_aegir.bhv  meta_aegir_fld.moos  meta_aegir_sim.moos  meta_buri.bhv  meta_buri_fld.moos  meta_buri_sim.moos  meta_shoreside.moos  plug_iGPS_KF.moos  plug_pBasicContactMgr.moos  plug_pCollectTempStats.moos  plug_pFrontEstimate.moos  plug_pHelmIvP.moos  plug_uFldMessageHandler.moos  plug_uFldNodeBroker.moos  plug_uTimerScript.moos  pregameChecklist.txt  runpregame  semicircle.py
missions/gametime2/attic/: launch.sh  plug_REALvessel.moos
missions/lab16baseline/: launch_shore.sh  launch_vehicle.sh  meta_vehicle.bhv  plug_pMarinePID.moos  plug_uFldNodeBroker.moos
missions/lab16baseline/attic/: meta_vehicle.moos  plug_SIMvessel.moos
missions/u7_beta/: plug_pFrontEstimate.moos
missions/u7_beta/.svn/: all-wcprops  entries
presentation/: present.odp
scripts/.svn/: all-wcprops  entries
src/: CMakeLists.txt
src/.svn/: all-wcprops  entries
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/lib_behaviors-test/.svn/: all-wcprops  entries
src/lib_behaviors_truax/: BHV_GoSideways.cpp  BHV_GoSideways.h  BHV_RubberBandTruax.cpp  BHV_RubberBandTruax.h  BHV_WaveFollow.cpp  BHV_WaveFollow.h  CMakeLists.txt
src/pCollectTempStats/: CMakeLists.txt  CollectTempStats.cpp  CollectTempStats.h  CollectTempStats_Info.cpp  CollectTempStats_Info.h  Measurement.h  MeasurementList.h  main.cpp  pCollectTempStats.moos
src/pGenetic/: CMakeLists.txt  Genetic.cpp  Genetic.h  Genetic_Info.cpp  Genetic_Info.h  main.cpp  pGenetic.moos
